// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`octokit.config.get > .json extension > result 1`] = `
{
  "config": {
    "comment": "Thank you for creating the issue!",
  },
  "files": [
    {
      "config": {
        "comment": "Thank you for creating the issue!",
      },
      "owner": "octocat",
      "path": ".github/my-app.json",
      "repo": "hello-world",
      "url": "https://api.github.com/repos/octocat/hello-world/contents/.github%2Fmy-app.json",
    },
  ],
}
`;

exports[`octokit.config.get > .yaml extension > result 1`] = `
{
  "config": {
    "comment": "Thank you for creating the issue!",
  },
  "files": [
    {
      "config": {
        "comment": "Thank you for creating the issue!",
      },
      "owner": "octocat",
      "path": ".github/my-app.yaml",
      "repo": "hello-world",
      "url": "https://api.github.com/repos/octocat/hello-world/contents/.github%2Fmy-app.yaml",
    },
  ],
}
`;

exports[`octokit.config.get > _extends file is missing > result 1`] = `
{
  "config": {
    "setting1": "value from repo config file",
  },
  "files": [
    {
      "config": {
        "setting1": "value from repo config file",
      },
      "owner": "octocat",
      "path": ".github/my-app.yml",
      "repo": "hello-world",
      "url": "https://api.github.com/repos/octocat/hello-world/contents/.github%2Fmy-app.yml",
    },
    {
      "config": null,
      "owner": "octocat",
      "path": ".github/my-app.yml",
      "repo": "base",
      "url": "https://api.github.com/repos/octocat/base/contents/.github%2Fmy-app.yml",
    },
  ],
}
`;

exports[`octokit.config.get > _extends: base > result 1`] = `
{
  "config": {
    "setting1": "value from repo config file",
    "setting2": "value from base config file",
  },
  "files": [
    {
      "config": {
        "setting1": "value from repo config file",
      },
      "owner": "octocat",
      "path": ".github/my-app.yml",
      "repo": "hello-world",
      "url": "https://api.github.com/repos/octocat/hello-world/contents/.github%2Fmy-app.yml",
    },
    {
      "config": {
        "setting1": "value from base config file",
        "setting2": "value from base config file",
      },
      "owner": "octocat",
      "path": ".github/my-app.yml",
      "repo": "base",
      "url": "https://api.github.com/repos/octocat/base/contents/.github%2Fmy-app.yml",
    },
  ],
}
`;

exports[`octokit.config.get > _extends: base -> _extends: base2 > result 1`] = `
{
  "config": {
    "setting1": "value from repo config file",
    "setting2": "value from base1 config file",
    "setting3": "value from base2 config file",
  },
  "files": [
    {
      "config": {
        "setting1": "value from repo config file",
      },
      "owner": "octocat",
      "path": ".github/my-app.yml",
      "repo": "hello-world",
      "url": "https://api.github.com/repos/octocat/hello-world/contents/.github%2Fmy-app.yml",
    },
    {
      "config": {
        "setting1": "value from base1 config file",
        "setting2": "value from base1 config file",
      },
      "owner": "octocat",
      "path": ".github/my-app.yml",
      "repo": "base",
      "url": "https://api.github.com/repos/octocat/base/contents/.github%2Fmy-app.yml",
    },
    {
      "config": {
        "setting1": "value from base2 config file",
        "setting2": "value from base2 config file",
        "setting3": "value from base2 config file",
      },
      "owner": "octocat",
      "path": ".github/my-app.yml",
      "repo": "base2",
      "url": "https://api.github.com/repos/octocat/base2/contents/.github%2Fmy-app.yml",
    },
  ],
}
`;

exports[`octokit.config.get > _extends: base with defaults and custom merge > result 1`] = `
{
  "config": {
    "otherSetting1": "value from repo config file",
    "otherSetting2": "value from base config file",
    "otherSetting3": "default value",
    "settings": {
      "one": "value from repo config file",
      "three": "default value",
      "two": "value from base config file",
    },
  },
  "files": [
    {
      "config": {
        "otherSetting1": "value from repo config file",
        "settings": {
          "one": "value from repo config file",
        },
      },
      "owner": "octocat",
      "path": ".github/my-app.yml",
      "repo": "hello-world",
      "url": "https://api.github.com/repos/octocat/hello-world/contents/.github%2Fmy-app.yml",
    },
    {
      "config": {
        "otherSetting1": "value from base config file",
        "otherSetting2": "value from base config file",
        "settings": {
          "one": "value from base config file",
          "two": "value from base config file",
        },
      },
      "owner": "octocat",
      "path": ".github/my-app.yml",
      "repo": "base",
      "url": "https://api.github.com/repos/octocat/base/contents/.github%2Fmy-app.yml",
    },
  ],
}
`;

exports[`octokit.config.get > _extends: base:test.yml > result 1`] = `
{
  "config": {
    "setting1": "value from repo config file",
    "setting2": "value from base config file",
  },
  "files": [
    {
      "config": {
        "setting1": "value from repo config file",
      },
      "owner": "octocat",
      "path": ".github/my-app.yml",
      "repo": "hello-world",
      "url": "https://api.github.com/repos/octocat/hello-world/contents/.github%2Fmy-app.yml",
    },
    {
      "config": {
        "setting1": "value from base config file",
        "setting2": "value from base config file",
      },
      "owner": "octocat",
      "path": "test.yml",
      "repo": "base",
      "url": "https://api.github.com/repos/octocat/base/contents/test.yml",
    },
  ],
}
`;

exports[`octokit.config.get > _extends: other-owner/base > result 1`] = `
{
  "config": {
    "setting1": "value from repo config file",
    "setting2": "value from base config file",
  },
  "files": [
    {
      "config": {
        "setting1": "value from repo config file",
      },
      "owner": "octocat",
      "path": ".github/my-app.yml",
      "repo": "hello-world",
      "url": "https://api.github.com/repos/octocat/hello-world/contents/.github%2Fmy-app.yml",
    },
    {
      "config": {
        "setting1": "value from base config file",
        "setting2": "value from base config file",
      },
      "owner": "other-owner",
      "path": ".github/my-app.yml",
      "repo": "base",
      "url": "https://api.github.com/repos/other-owner/base/contents/.github%2Fmy-app.yml",
    },
  ],
}
`;

exports[`octokit.config.get > _extends: other-owner/base:test.yml > result 1`] = `
{
  "config": {
    "setting1": "value from repo config file",
    "setting2": "value from base config file",
  },
  "files": [
    {
      "config": {
        "setting1": "value from repo config file",
      },
      "owner": "octocat",
      "path": ".github/my-app.yml",
      "repo": "hello-world",
      "url": "https://api.github.com/repos/octocat/hello-world/contents/.github%2Fmy-app.yml",
    },
    {
      "config": {
        "setting1": "value from base config file",
        "setting2": "value from base config file",
      },
      "owner": "other-owner",
      "path": "test.yml",
      "repo": "base",
      "url": "https://api.github.com/repos/other-owner/base/contents/test.yml",
    },
  ],
}
`;

exports[`octokit.config.get > README simple usage example > result 1`] = `
{
  "config": {
    "comment": "Thank you for creating the issue!",
  },
  "files": [
    {
      "config": {
        "comment": "Thank you for creating the issue!",
      },
      "owner": "octocat",
      "path": ".github/my-app.yml",
      "repo": "hello-world",
      "url": "https://api.github.com/repos/octocat/hello-world/contents/.github%2Fmy-app.yml",
    },
  ],
}
`;

exports[`octokit.config.get > branch option > result 1`] = `
{
  "config": {
    "comment": "Thank you for creating the issue!",
  },
  "files": [
    {
      "config": {
        "comment": "Thank you for creating the issue!",
      },
      "owner": "octocat",
      "path": ".github/my-app.yml",
      "repo": "hello-world",
      "url": "https://api.github.com/repos/octocat/hello-world/contents/.github%2Fmy-app.yml?ref=my-branch",
    },
  ],
}
`;

exports[`octokit.config.get > config file is empty > result 1`] = `
{
  "config": {},
  "files": [
    {
      "config": {},
      "owner": "octocat",
      "path": ".github/my-app.yml",
      "repo": "hello-world",
      "url": "https://api.github.com/repos/octocat/hello-world/contents/.github%2Fmy-app.yml",
    },
  ],
}
`;

exports[`octokit.config.get > config file missing > result 1`] = `
{
  "config": {
    "comment": "Thank you for creating the issue!",
  },
  "files": [
    {
      "config": null,
      "owner": "octocat",
      "path": ".github/my-app.yml",
      "repo": "hello-world",
      "url": "https://api.github.com/repos/octocat/hello-world/contents/.github%2Fmy-app.yml",
    },
    {
      "config": null,
      "owner": "octocat",
      "path": ".github/my-app.yml",
      "repo": ".github",
      "url": "https://api.github.com/repos/octocat/.github/contents/.github%2Fmy-app.yml",
    },
  ],
}
`;

exports[`octokit.config.get > merges deeply using defaults function > result 1`] = `
{
  "config": {
    "otherSetting1": "value from config file",
    "otherSetting2": "default value",
    "settings": {
      "one": "value from config file",
      "two": "default value",
    },
  },
  "files": [
    {
      "config": {
        "otherSetting1": "value from config file",
        "settings": {
          "one": "value from config file",
        },
      },
      "owner": "octocat",
      "path": ".github/my-app.yml",
      "repo": "hello-world",
      "url": "https://api.github.com/repos/octocat/hello-world/contents/.github%2Fmy-app.yml",
    },
  ],
}
`;

exports[`octokit.config.get > merges defaults option > result 1`] = `
{
  "config": {
    "config": "value from .github/my-app.yml",
    "otherConfig": "default value",
  },
  "files": [
    {
      "config": {
        "config": "value from .github/my-app.yml",
      },
      "owner": "octocat",
      "path": ".github/my-app.yml",
      "repo": "hello-world",
      "url": "https://api.github.com/repos/octocat/hello-world/contents/.github%2Fmy-app.yml",
    },
  ],
}
`;

exports[`octokit.config.get > merges defaults option from .github repository > result 1`] = `
{
  "config": {
    "config": "value from octocat/.github:.github/my-app.yml",
    "otherConfig": "default value",
  },
  "files": [
    {
      "config": null,
      "owner": "octocat",
      "path": ".github/my-app.yml",
      "repo": "hello-world",
      "url": "https://api.github.com/repos/octocat/hello-world/contents/.github%2Fmy-app.yml",
    },
    {
      "config": {
        "config": "value from octocat/.github:.github/my-app.yml",
      },
      "owner": "octocat",
      "path": ".github/my-app.yml",
      "repo": ".github",
      "url": "https://api.github.com/repos/octocat/.github/contents/.github%2Fmy-app.yml",
    },
  ],
}
`;

exports[`octokit.config.get > repo is .github > result 1`] = `
{
  "config": {},
  "files": [
    {
      "config": null,
      "owner": "octocat",
      "path": ".github/my-app.yml",
      "repo": ".github",
      "url": "https://api.github.com/repos/octocat/.github/contents/.github%2Fmy-app.yml",
    },
  ],
}
`;

exports[`octokit.config.get > resolves _extends in .github repository file > result 1`] = `
{
  "config": {
    "config": "value from octocat/.github:.github/my-second-app.yml",
    "otherConfig": "value from octocat/hello-world:.github/my-third-app.yml",
  },
  "files": [
    {
      "config": null,
      "owner": "octocat",
      "path": ".github/my-app.yml",
      "repo": "hello-world",
      "url": "https://api.github.com/repos/octocat/hello-world/contents/.github%2Fmy-app.yml",
    },
    {
      "config": {},
      "owner": "octocat",
      "path": ".github/my-app.yml",
      "repo": ".github",
      "url": "https://api.github.com/repos/octocat/.github/contents/.github%2Fmy-app.yml",
    },
    {
      "config": {
        "config": "value from octocat/.github:.github/my-second-app.yml",
      },
      "owner": "octocat",
      "path": ".github/my-second-app.yml",
      "repo": ".github",
      "url": "https://api.github.com/repos/octocat/.github/contents/.github%2Fmy-second-app.yml",
    },
    {
      "config": {
        "otherConfig": "value from octocat/hello-world:.github/my-third-app.yml",
      },
      "owner": "octocat",
      "path": ".github/my-third-app.yml",
      "repo": "hello-world",
      "url": "https://api.github.com/repos/octocat/hello-world/contents/.github%2Fmy-third-app.yml",
    },
  ],
}
`;

exports[`octokit.config.get > returns defaults option when no config files exist > result 1`] = `
{
  "config": {
    "comment": "Thank you for creating the issue!",
  },
  "files": [
    {
      "config": null,
      "owner": "octocat",
      "path": ".github/my-app.yml",
      "repo": "hello-world",
      "url": "https://api.github.com/repos/octocat/hello-world/contents/.github%2Fmy-app.yml",
    },
    {
      "config": null,
      "owner": "octocat",
      "path": ".github/my-app.yml",
      "repo": ".github",
      "url": "https://api.github.com/repos/octocat/.github/contents/.github%2Fmy-app.yml",
    },
  ],
}
`;
